# Read.Write

./: README.md
Golang/: go.mod  main.go
Golang/core/: console.go  memory.go
Powershell/: main.ps1
Powershell/core/: console.ps1  memory.ps1  types.ps1
Python/: main.py
Python/core/: __init__.py  console.py  memory.py
Rust/: Cargo.toml
Rust/src/: main.rs
Rust/src/core/: console.rs  memory.rs  mod.rs
VBScript/DynamicWrapperX/: main.vbs
